[package]
name = "fuzz"
version = "0.1.0"
authors = ["Nym Seddon <unseddd@shh.xyz>"]
edition = "2018"
default-run = "evm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = "0.16.1"
honggfuzz = "0.5"
web3 = "0.11.0"

[[bin]]
name = "evm"
path = "fuzz_targets/evm.rs"
